--- a/BookMeeting/requirements.txt
+++ b/BookMeeting/requirements.txt
@@ -1,106 +1,69 @@
-apturl==0.5.2
-asgiref==3.5.2
-backports.zoneinfo==0.2.1
-bcrypt==3.1.7
-black==22.3.0
-blinker==1.4
-Brlapi==0.7.0
-certifi==2019.11.28
-chardet==3.0.4
-click==8.1.3
-colorama==0.4.3
-command-not-found==0.3
-cryptography==2.8
-cupshelpers==1.0
-dbus-python==1.2.16
-defer==1.0.6
-distlib==0.3.4
-distro==1.4.0
-distro-info===0.23ubuntu1
+asgiref==3.5.0
+atomicwrites==1.4.0
+attrs==21.4.0
+certifi==2021.10.8
+cffi==1.15.0
+chainer==7.8.1
+charset-normalizer==2.0.12
+colorama==0.4.4
+coverage==6.3.2
+cryptography==36.0.1
+cycler==0.11.0
+decorator==5.1.1
 Django==3.2
-django-cors-headers==3.13.0
-django-filter==22.1
+django-classy-tags==3.0.1
+django-cms==3.9.0
+django-cors-headers==3.11.0
+django-filter==21.1
+django-formtools==2.3
+django-localflavor==3.1
 django-rest-passwordreset==1.2.1
+django-sekizai==3.0.1
+django-theherk-events==1.8.1
+django-theherk-resources==1.6.1
+django-treebeard==4.5.1
+djangocms-admin-style==3.0.0
 djangorestframework==3.13.1
+djangorestframework-jwt==1.11.0
 djangorestframework-simplejwt==4.0.0
-duplicity==0.8.12.0
-entrypoints==0.3
-fasteners==0.14.1
-filelock==3.7.1
-Flask==1.1.1
-Flask-Login==0.6.1
-Flask-WTF==1.0.1
-future==0.18.2
-httplib2==0.14.0
-idna==2.8
-isort==5.10.1
-itsdangerous==1.1.0
-Jinja2==2.10.1
-keyring==18.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-lockfile==0.12.2
-louis==3.12.0
-macaroonbakery==1.3.1
-Mako==1.1.0
-MarkupSafe==1.1.0
-monotonic==1.5
-mypy==0.961
-mypy-extensions==0.4.3
-mysql-client==0.0.1
-mysqlclient==2.1.1
-netifaces==0.10.4
-numpy==1.23.0
-oauthlib==3.1.0
-olefile==0.46
-paramiko==2.6.0
-pathspec==0.9.0
-pbr==5.9.0
-pexpect==4.6.0
-Pillow==7.0.0
-pipenv==2022.6.7
-platformdirs==2.5.2
-protobuf==3.6.1
-pycairo==1.16.2
-pycups==1.9.73
-PyGObject==3.36.0
-pyinotify==0.9.6
+et-xmlfile==1.1.0
+Events==0.4
+filelock==3.6.0
+fonttools==4.33.3
+idna==3.3
+iniconfig==1.1.1
+kiwisolver==1.4.3
+matplotlib==3.5.2
+mysqlclient==2.1.0
+numpy==1.22.3
+openpyxl==3.0.10
+packaging==21.3
+Pillow==9.0.1
+pluggy==1.0.0
+protobuf==3.19.4
+py==1.11.0
+pycparser==2.21
+Pygments==2.11.2
 PyJWT==1.7.1
-pymacaroons==0.13.0
-PyMySQL==1.0.2
-PyNaCl==1.3.0
-pyOpenSSL==19.0.0
-pyRFC3339==1.1
-python-apt==2.0.0+ubuntu0.20.4.7
-python-dateutil==2.7.3
-python-debian===0.1.36ubuntu1
-python-dotenv==0.20.0
-pytz==2019.3
-pyxdg==0.26
-PyYAML==5.3.1
-reportlab==3.5.34
-requests==2.22.0
-requests-unixsocket==0.2.0
-SecretStorage==2.3.1
-simplejson==3.16.0
-six==1.14.0
+pymongo==4.0.2
+pypandoc==1.7.4
+pyparsing==3.0.7
+pytest==7.0.1
+python-dateutil==2.8.2
+python-dotenv==0.19.2
+python-stdnum==1.17
+pytz==2021.3
+pyzmq==22.3.0
+requests==2.27.1
+room==0.1.11
+self==2020.12.3
+six==1.16.0
 sqlparse==0.4.2
-systemd-python==234
-testresources==2.0.1
 tomli==2.0.1
-typing_extensions==4.2.0
-ubuntu-advantage-tools==27.9
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
+tornado==6.1
+translation==1.0.5
+typing-extensions==4.1.1
+tzdata==2022.1
 Unidecode==1.3.4
-urllib3==1.25.8
-usb-creator==0.3.7
-virtualenv==20.14.1
-virtualenv-clone==0.5.7
-wadllib==1.3.3
-Werkzeug==2.1.2
-WTForms==3.0.1
-xkit==0.0.0
+urllib3==1.26.8
+wfastcgi==3.0.0
