--- a/BookMeeting/requirements.txt
+++ b/BookMeeting/requirements.txt
@@ -34,7 +34,9 @@ idna==3.3
 iniconfig==1.1.1
 kiwisolver==1.4.3
 matplotlib==3.5.2
-mysqlclient==2.1.0
+mysql-connector-python==8.0.29
+PyMySQL==1.0.2
+mysqlclient==1.4.0
 numpy==1.22.3
 openpyxl==3.0.10
 packaging==21.3
