--- a/BookMeeting/.env
+++ b/BookMeeting/.env
@@ -1,7 +1,7 @@
 SECRET_KEY=django-insecure-ckzjk(yd8)coxlm2qf#^^h%4m=7k21l7_=enq9^8u&^_@ztv0-
 DATABASE_NAME=bookmeeting
-DATABASE_USER=bookmeeting
-DATABASE_PASS=Admin1234
-DB_HOST=bookmeeting.cs8watsrgu5l.us-west-1.rds.amazonaws.com
+DATABASE_USER=root
+DATABASE_PASS=admin
+DB_HOST=127.0.0.1
 DB_PORT=3306
 DEBUG=False
