--- a/requirements.txt
+++ b/requirements.txt
@@ -34,7 +34,9 @@ idna==3.3
 iniconfig==1.1.1
 kiwisolver==1.4.3
 matplotlib==3.5.2
-mysqlclient==2.1.0
+mysql-connector-python==8.0.29
+PyMySQL==1.0.2
+mysqlclient==1.4.0
 numpy==1.22.3
 openpyxl==3.0.10
 packaging==21.3
@@ -67,3 +69,4 @@ tzdata==2022.1
 Unidecode==1.3.4
 urllib3==1.26.8
 wfastcgi==3.0.0
+drf-yasg==1.21.3
