--- a/BookMeeting/.env
+++ b/BookMeeting/.env
@@ -1,5 +1,5 @@
 SECRET_KEY=django-insecure-ckzjk(yd8)coxlm2qf#^^h%4m=7k21l7_=enq9^8u&^_@ztv0-
-DATABASE_NAME=bookmeeting
+DATABASE_NAME=book
 DATABASE_USER=root
 DATABASE_PASS=Lehuynam@123
 DB_HOST=127.0.0.1
