--- a/BookMeeting/.env
+++ b/BookMeeting/.env
@@ -5,3 +5,4 @@ DATABASE_PASS=Lehuynam@123
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DEBUG=False
+SENDGRID_API_KEY=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
